# xdm

./: .gitignore  Makefile.am  TODO  autogen.sh  build.sh  configure.ac
Documentation/: 20140731.txt  HOWTO.txt  server-source-analysis.md  site_node.txt
conf/: Makefile.am  hadm_conf.xml  hadm_conf.xml.resource.runnode  hadm_conf.xml.site_node  hadm_conf.xml.site_node_2  hadm_log.conf
debug/: 2015.5.28.093015  2015.5.28.102721  2015.5.28.142754  debug.2015.5.29
devlog/: problems.md
include/: Makefile.am  bwr.inc  common.inc  common_string.h.in  errcode.h  packet.inc
kmod/: Kbuild  Makefile  bio_handler.c  bio_handler.h  bio_helper.c  bio_helper.h  buffer.c  buffer.h  bwr.c  bwr.h  bwr_data.c  cmd_worker.c  dbm.c  dbm.h  fullsync.c  fullsync.h  hadm_acct.h  hadm_bio.c  hadm_bio.h  hadm_config.c  hadm_config.h  hadm_def.h  hadm_device.c  hadm_device.h  hadm_node.c  hadm_node.h  hadm_packet.c  hadm_packet.h  hadm_proc.c  hadm_proc.h  hadm_proc_show.c  hadm_proc_show.h  hadm_queue.c  hadm_queue.h  hadm_site.c  hadm_site.h  hadm_socket.c  hadm_socket.h  hadm_struct.c  hadm_struct.h  (+18 more)
libs/: Makefile.am
libs/libevent-2.0.21-stable/: Makefile.am
libs/libevent-2.0.21-stable/include/: Makefile.am
libs/zlog-master/: autogen.sh  configure.ac
libs/zlog-master/src/: Makefile.am
specs/: hadm-km.spec  hadm-km.spec.in  hadm-utils.spec  hadm.spec.in  hello.spec
src/: .conf.c.swo  Makefile.am  common.h  conf.c  conf.h  connection.c  connection.h  daemon.c  daemon.h  device.c  device.h  device_worker.c  device_worker.h  hadm_main.c  hadmcmd.c  hadmcmd.h  hadmctl.c  hadmctl.h  io.c  io.h  ip.c  ip.h  list.h  log.c  log.h  node.c  node.h  node_worker.c  node_worker.h  packet.c  packet.h  queue.c  queue.h  resource.c  resource.h  sock.c  sock.h  thread.c  thread.h  timer.c  (+3 more)
test/: hadm_test_case.xls  status.txt  tc.sh  test-report-20150108-1101.md  test-report-20150204-1058.md  test.doc  test_case.doc
test/script/: fill_srl.sh  ioerror.sh
test/script/lib/: utils.sh
test/script/test_case/: case1.sh  standalone_case6.sh
